# apue

./: .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  TODO.org
apue.3e/: Make.defines.linux  meson.build  native-linux.ini
apue.3e/advio/: deadlock.c  lockfile.c  mandatory.c  mcopy2.c  meson.build  nonblockw.c  readn.c  rot13a.c  rot13c2.c.in  writen.c
apue.3e/daemons/: init.c  meson.build  reread.c  reread2.c  single.c
apue.3e/datafiles/: getpwnam.c  meson.build  strftime.c
apue.3e/db/: db.c  meson.build  t4.c
apue.3e/environ/: cmd1.c  cmd2.c  doatexit.c  echoarg.c  getrlimit.c  hello1.c  meson.build  opendata.c  scope.c  testjmp.c
apue.3e/exercises/: asyncsocket.c  bo.c  fifo1.c  fmemopen.c  getlogin.c  getpw44bsd.c  getpwsvr4.c  goodexit.c  longpath.c  meson.build  openmax.c  pendlock.c  pollmsg2.c  prtime.c  sizepipe.c  sleep.c  sleepus_poll.c  sleepus_select.c  vfork3.c  zombie.c
apue.3e/filedir/: access.c  cdpwd.c  changemod.c  devrdev.c  filetype.c  ftw8.c  meson.build  mycd.c  umask.c  unlink.c  zap.c
apue.3e/fileio/: fileflags.c  hole.c  meson.build  mycat.c  seek.c  setfl.c
apue.3e/include/: apue.h  apue2.h  meson.build
apue.3e/intro/: getcputc.c  hello.c  ls1.c  meson.build  mycat.c  shell1.c  shell2.c  testerror.c  uidgid.c
apue.3e/ipc1/: add2.c  add2stdio.c  devzero.c  meson.build  myuclc.c  pipe1.c  pipe2.c  pipe4.c  popen.c  popen1.c  popen2.c  slock.c  slock.h  tellwait.c  tshm.c
apue.3e/ipc2/: bindunix.c  meson.build  pollmsg.c  recvfd2.c  sendfd2.c  sendmsg.c
apue.3e/ipc2/open/: main.c  meson.build  open.c  open.h
apue.3e/ipc2/open.fe/: main.c  meson.build  open.c  open.h
apue.3e/ipc2/opend/: cliargs.c  client.c  loop.poll.c  loop.select.c  main.c  meson.build  opend.h  request.c
apue.3e/ipc2/opend.fe/: cliargs.c  main.c  meson.build  opend.h  request.c
apue.3e/lib/: Orecvfd.c  bufargs.c  cliconn.c  clrfl.c  daemonize.c  error.c  errorlog.c  lockreg.c  locktest.c  meson.build  nspipe.c  openmax.c  pathalloc.c  popen.c  prexit.c  prmask.c  ptyfork.c  ptyopen.c  readn.c  recvfd.c  semaph.c  senderr.c  sendfd.c  servaccept.c  servlisten.c  setfd.c  setfl.c  signal.c  signalintr.c  sleep.c  sleepus.c  spipe.c  strerror.c  tellwait.c  ttymodes.c  writen.c
apue.3e/printer/: ipp.h  meson.build  print.c  print.h  printd.c  util.c
apue.3e/proc/: echoall.c  exec1.c  exec2.c  fork1.c  fork2.c  meson.build  nice.c  pracct.c  pruids.c  system.c  systest1.c  systest3.c  tellwait1.c  tellwait2.c  test1.c  times1.c  vfork1.c  wait1.c
apue.3e/pty/: driver.c  loop.c  main.c  meson.build
apue.3e/relation/: meson.build  orphan3.c
apue.3e/scripts/: gen_rot13c2.sh  gen_standards_c.sh
apue.3e/signals/: abort.c  child.c  critical.c  mask.c  meson.build  read1.c  read2.c  reenter.c  setops.c  sigtstp.c  sigusr.c  sleep1.c  sleep2.c  suspend1.c  suspend2.c  system.c  systest2.c  tsleep2.c
apue.3e/sockets/: clconn.c  clconn2.c  findsvc.c  initsrv1.c  initsrv2.c  meson.build  ruptime-dg.c  ruptime.c  ruptimed-dg.c  ruptimed-fd.c  ruptimed.c
apue.3e/standards/: conf.c.modified  makeconf.awk  makeopt.awk  meson.build
apue.3e/stdio/: Makefile  buf.c  fgetsfputs.c  getcharbug.c  getcputc.c  memstr.c  meson.build  mkstemp.c  tempfiles.c
apue.3e/termios/: csize.c  ctermid.c  getpass.c  isatty.c  meson.build  settty.c  t_getpass.c  t_isatty.c  t_raw.c  t_ttyname.c  ttyname.c  winch.c
apue.3e/threadctl/: atfork.c  detach.c  getenv1.c  getenv2.c  getenv3.c  meson.build  suspend.c  timeout.c
apue.3e/threads/: badexit2.c  barrier.c  cleanup.c  condvar.c  exitstatus.c  maketimeout.c  meson.build  mutex1.c  mutex2.c  mutex3.c  rwlock.c  threadid.c  timedlock.c
entrypoint/: shell.sh
entrypoint/dotfiles/: .extrabashrc  .lldbinit
plans/: 01-header-inlining.md
tasks/: add-sanitizer-gate.md  image-export-import-targets.md
tasks/archive/2026/05/04/: 02-meson-build.md  03-musl-clang-warnings.md
tasks/archive/2026/06/16/: image-export-import-targets.md
